# gigapoint

./: .gitignore  README.md
apps/: caveutil_class.py  run_ChevronBigFoot.py  run_century.py  run_moonlite.py  run_mt_jen.py  test_mesh.py
gigapoint/: .gitignore  CMakeLists.txt  ColorTexture.cpp  ColorTexture.h  FractureTracer.cpp  FractureTracer.h  FrameBuffer.cpp  FrameBuffer.h  Interaction.cpp  Interaction.h  LRU.cpp  LRU.h  Material.cpp  Material.h  Menu.cpp  Menu.h  NodeGeometry.cpp  NodeGeometry.h  PointCloud.cpp  PointCloud.h  README.md  Shader.cpp  Shader.h  Thread.cpp  Thread.h  TracingSegment.cpp  TracingSegment.h  Utils.cpp  Utils.h  cJSON.cpp  cJSON.h  deploy.sh  gigapoint.cpp  multiuser_fracturetracing.py  onlineupdatedemo.py  onlineupdatedemo_generator.py  wqueue.h
gigapoint/app/: CMakeLists.txt  Camera.cpp  Camera.h  GLInclude.h  GLUtils.cpp  GLUtils.h  main.cpp  nuklear_glfw_gl2.h
gigapoint/gigapoint_resource/colormaps/: gen_dat_file.m  generate.html
gigapoint/gigapoint_resource/config/: gigapoint_ChevronBigFoot_cave2.json  gigapoint_HoyoVerde_cave2.json  gigapoint_HoyoVerde_local.json  gigapoint_LaPalma_cave2.json  gigapoint_LaPalma_local.json  gigapoint_WP_07_cave2.json  gigapoint_WP_07_local.json  gigapoint_alex_theatre_cave2.json  gigapoint_cannington_cave2.json  gigapoint_cave2_coles.json  gigapoint_century_hres_cave2.json  gigapoint_century_hres_local.json  gigapoint_century_local.json  gigapoint_irt.json  gigapoint_moonlite10_cave2.json  gigapoint_moonlite25_cave2.json  gigapoint_moonlite25_local.json  gigapoint_moonlite_cave2.json  gigapoint_mt_jen_cave2.json  gigapoint_mt_jen_local.json  gigapoint_rail_local.json  gigapoint_some_tree.json  gigapoint_testpore_cave2.json  gigapoint_tracer_debug.json  gigapoint_tracer_test.json  onlineupdatedemo.json
gigapoint/gigapoint_resource/shaders/: edl.frag  edl.vert  point.frag  point.vert  point_app.frag  test.vert
gigapoint/omegalib_app/: CMakeLists.txt  main.cpp
gigapoint/omegalib_module_test/: century  gigapoint.py  gigapoint_menu.py  gigapoint_moonlite25.py  test1.py  test2.py
opotree/: .gitignore  CMakeLists.txt  ColorTexture.cpp  LRU.h  Material.cpp  Material.h  Menu.cpp  Menu.h  MyTriangle.cpp  MyTriangle.h  NodeGeometry.cpp  NodeGeometry.h  PCLoader.cpp  PCLoader.h  PointCloud.cpp  PointCloud.h  Shader.cpp  Shader.h  Thread.cpp  Thread.h  Utils.cpp  Utils.h  main.cpp  main_test.cpp  onlineUpdate.txt  wqueue.h
opotree/data/: README.md  opotree.json  opotree_alex_theatre_cave2.json  opotree_cave2.json  opotree_cave2_coles.json  opotree_century_hres_cave2.json  opotree_century_hres_local.json  opotree_century_local.json  opotree_mt_jen_cave2.json  opotree_mt_jen_local.json
opotree/shaders/: mytriangle.vert  point.frag  point.vert  simple.frag  simple.vert  test.frag  test.vert
otest/: CMakeLists.txt  ColorTexture.cpp  ColorTexture.h  Cube.cpp  Cube.h  Points.cpp  Points.h  Shader.cpp  Shader.h  Utils.cpp  Utils.h  Viewer.cpp  Viewer.h  main.cpp  otest.py
otest/cyclops/common/: mypoints.frag
otest/shaders/: simple.frag  simple.vert  sphere.frag  sphere.geom  sphere.vert
scripts/: getstarts_gz.py  getstats.py  pts2ply.py  subsampling.py
